test/lexer/error/err_09_utf8_identifier_error.pl0
program utf8_ident;
var 变量;  // UTF-8 chars are not valid identifiers in strict PL/0
begin
end
